syntax = "proto3";

option go_package = "github.com/sakiib/grpc-basics;pb";

message Author {
  string first_name = 1;
  string last_name = 2;
}